# librespot-credentials-demo

./: .env.dist  .gitignore  Cargo.toml  README.md
src/: main.rs
src/auth/: credentials.rs
src/clap/: args.rs
