[package]
name = "spotipy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.30"
hex = "0.4.3"
librespot = "0.4.2"
serde = "1.0.208"
serde-env = "0.2.0"
sha1 = "0.10.6"
tokio = { version = "1.39.3", features = ["full"] }
